--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
+*{
+    overflow: hidden;
+}
 body {
     background-color: rgb(11, 3, 45);
     color: aliceblue;
     font: 1em sans-serif;
     margin: 0%;
     padding: 0;
-    overflow: hidden;
 }
